--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -80,11 +80,14 @@ jobs:
       - name: Set GITHUB_PAGES env variable
         run: echo "GITHUB_PAGES=true" >> $GITHUB_ENV
       # New step: Setup PDF worker file
-      - name: Setup PDF worker file
+      - name: Setup PDF files and worker
         run: |
-          # Create scripts directory if it doesn't exist
+          echo "Setting up PDF files and worker script..."
+          
+          # Create necessary directories
           mkdir -p public/scripts
           mkdir -p public/portfolio/scripts
+          mkdir -p public/portfolio/assets/documents
           
           # Download pdf.worker.min.js from CDN if needed
           if [ ! -f public/scripts/pdf.worker.min.js ]; then
@@ -95,7 +98,13 @@ jobs:
           # Copy the worker file to the GitHub Pages structure
           cp public/scripts/pdf.worker.min.js public/portfolio/scripts/pdf.worker.min.js
           
-          echo "PDF worker files prepared for deployment"
+          # Copy PDF files to the portfolio structure if they exist
+          if [ -d public/assets/documents ]; then
+            echo "Copying PDF files to portfolio structure..."
+            cp -r public/assets/documents/* public/portfolio/assets/documents/
+          fi
+          
+          echo "PDF files and worker script prepared for deployment"
 
       - name: Build with Next.js
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
@@ -108,7 +117,7 @@ jobs:
           
           echo "Checking built structure for PDF documents..."
           find ./out -name "*.pdf" -type f
-          
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
